fix spacing on service block

--- a/assets/scss/organisms/_services-block.scss
+++ b/assets/scss/organisms/_services-block.scss
@@ -68,10 +68,11 @@
         justify-content: start;
 
         @include breakpoint(md) {
-            align-items: end;
+            gap: fluid(2, 4, false);
             grid-template-areas: 'ICON' 'TEXT';
             grid-template-columns: auto;
-            justify-content: center;
+            place-content: center;
+            place-items: center;
         }
     }
 
